[package]
name = "rusthypergraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusthypergraph"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1