[package]
name = "rusthypergraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusthypergraph"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
nalgebra = "0.33.2"
rustc-hash = "1.1"
petgraph = {version = "0.6.5"}
itertools = "0.12"
ordered-float = "3.0"
rustworkx-core = "0.13.2"

[profile.release]
lto = 'fat'
codegen-units = 1